[package]
name = "modulate-comms"
version = "0.0.1"
edition = "2021"
authors = ["Daniel Resio <dresiomob@gmail.com>"]
description = "A peer-to-peer chat application with group chat functionality"

[dependencies]
webrtc = "0.12.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" 
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }